Rewrite the rest of CodexScreen#render(), make sidebar open faster, rewrite CodexScreen#mouseClicked(), tweak codex texture colors